Allow deletion of entries in purchase log

--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
     <div class="item">
       <span class="name">#: name #</span>
       <span class="price">#: kendo.toString(price, "c") #</span>
+      <a href="\\#" data-role="button" class="delete">Delete</a>
     </div>
   </script>
 
