Add offline persistence through localForage

--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
 
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="http://cdn.kendostatic.com/2013.3.1324/js/kendo.mobile.min.js"></script>
+  <script src="localforage.min.js"></script>
   <script src="model.js"></script>
   <script>
       var app = new kendo.mobile.Application(document.body);
