--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" manifest="app.cache">
 <head>
   <meta charset="utf-8">
   <title>Cashwise</title>
