--- a/app/index.html
+++ b/app/index.html
@@ -47,8 +47,15 @@
 
   <div id="purchase-history"
        data-role="view" data-layout="main-layout"
-       data-title="Purchase history"
        data-init="cashwise.initHistory">
+
+      <div data-role="header">
+        <div data-role="navbar">
+           <span>Purchase history</span>
+           <a data-role="button" data-align="right" data-bind="attr: { className: onlineClass }"></a>
+        </div>
+      </div>
+
       <ul data-role="listview" data-template="purchase-history-item" data-style="inset"></ul>
   </div>
 
@@ -81,6 +88,12 @@
   <script src="model.js"></script>
   <script>
       var app = new kendo.mobile.Application(document.body);
+
+      (function() {
+          var connectionStatusChange = $.proxy(cashwise.connectionStatusChange, cashwise);
+          window.addEventListener('online',  connectionStatusChange);
+          window.addEventListener('offline', connectionStatusChange);
+      })();
   </script>
 </body>
 </html>
