WIP on everlive sync

--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
       <div data-role="header">
         <div data-role="navbar">
            <span>Purchase history</span>
-           <a data-role="button" data-align="right" data-bind="attr: { className: onlineClass }"></a>
+           <a data-role="button" data-align="right" data-bind="attr: { className: onlineClass }" data-click="cashwise.sync">Sync</a>
         </div>
       </div>
 
